@@ -20,7 +20,6 @@ package SisIYA_Config;
 #$checks{'ntpstat'}{'auto'} = 1;
 #$checks{'oracle_hitratios'}{'auto'} = 1;
 #$checks{'oracle_tablespace'}{'auto'} = 1;
-#$checks{'process_count'}{'auto'} = 1;
 #$checks{'progs'}{'auto'} = 1;
 #$checks{'raid_hpacu'}{'auto'} = 1;
 #$checks{'smart'}{'auto'} = 1;
