@@ -1,0 +1,10 @@
+##################################################################################################
+### These are the default values for this script. Uncomment and change
+### them according to your needs. This is Perl code.
+##################################################################################################
+#Put the following line in the /etc/sisiya/sisiya-client-checks/conf.d/sisiya_system.conf file:
+#$info_prog = '/usr/bin/perl -I/etc/sisiya/sisiya-client-checks /usr/share/sisiya-client-checks/utils/sisiya_system_info_hpasm.pl';
+#$hpasmcli_prog = '/sbin/hpasmcli';
+##################################################################################################
+### do not change the following line.
+1;
