@@ -1,5 +1,8 @@
 sisiya-remote-checks (0.6.31-1) UNRELEASED; urgency=low
-  data part of the SisIYA message
+
+  * changed the location of scripts and config files to conform with FSH
+    standard
+  * data part of the SisIYA message
     to sisiya_check_ping.pl client check for the new web UI
 
 sisiya-remote-checks (0.6.30-1) UNRELEASED; urgency=low
